# era_file_substream

./: .gitignore  Cargo.toml  Makefile  era-file-substream-v1.0.1.spkg  substreams.yaml
proto/: verifiable_block.proto
src/: header_accumulator.rs  lib.rs  utils.rs
src/assets/: acc_values.txt
src/pb/: acme.verifiable_block.v1.rs  mod.rs
