[package]
name = "substreams-ethereum-quickstart"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-ethereum = "0.9"
prost = "0.11"
prost-types = "0.11"
embed-file = "0.1.0"
ethereum-types = "0.14.1"
hex = "0.4.3"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
